Fix overflow-x on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,6 +40,10 @@ body {
     font-feature-settings: "kern" 1;
     font-kerning: normal;
     letter-spacing: $letter-spacing;
+
+    @include media-query($on-palm) {
+        overflow-x: hidden;
+    }
 }
 
 
